Bug 64031 - [HSW ULT]eDP brightness is zero after the computer start
Summary: [HSW ULT]eDP brightness is zero after the computer start
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Video (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: acpi_power-video
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-30 05:03 UTC by Qingshuai Tian
Modified: 2013-11-15 06:11 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.12.0rc3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (79.95 KB, text/plain)
2013-10-30 05:03 UTC, Qingshuai Tian
Details
acpidump (336.43 KB, text/plain)
2013-10-30 05:06 UTC, Qingshuai Tian
Details
Fix initial level validity test (962 bytes, patch)
2013-10-31 01:46 UTC, Aaron Lu
Details | Diff
Quirk initial backlight level 0 (1.21 KB, patch)
2013-10-31 01:47 UTC, Aaron Lu
Details | Diff

Description Qingshuai Tian 2013-10-30 05:03:51 UTC
Created attachment 112731 [details]
dmesg

System Environment:
--------------------------
Kernel: (drm-intel-next-queued)92e76c8c7e436a07af3e0b594480ff8689add078
Some additional commit info:
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Oct 21 19:01:58 2013 +0300

    drm/i915: Clamp cursor coordinates to int16_t range

Bug detailed description:
-----------------------------
Everytime when the computer boot up into operating system, its eDP monitor will turn into black and its brightness is zero. But in the BIOS stage, the monitor works well.

After the machine boot up, we can change the brightness with the function keys(Fn+F11),or we can also change the value of brightness in file (/sys/class/backlight/intel_backlight/brightness) .Then the monitor will work normally.

Reproduce steps:
-----------------------------
1.boot up the machine 
2.cat /sys/class/backlight/intel_backlight/brightness
Comment 1 Qingshuai Tian 2013-10-30 05:06:11 UTC
Created attachment 112741 [details]
acpidump

This is the acpidump.
Comment 2 Aaron Lu 2013-10-31 01:46:17 UTC
Created attachment 112851 [details]
Fix initial level validity test

There are two patches, this is patch 1. Apply on top of Rafael's linux-next branch:
http://git.kernel.org/pub/scm/linux/kernel/git/rafael/linux-pm.git linux-next
Comment 3 Aaron Lu 2013-10-31 01:47:03 UTC
Created attachment 112861 [details]
Quirk initial backlight level 0

This is patch 2, used to quirk initial backlight level 0 problem. Apply on top of patch 1.
Comment 4 Aaron Lu 2013-11-05 02:55:55 UTC
Qingshuai handed me the idealpad u330p and I did the test, everything works now with the two above patches applied.

Alternatively, the system can be quirked to use native backlight as it is also a win8 system with Intel graphics card.
Comment 5 Shuduo Sang 2013-11-11 05:57:18 UTC
It works great on my Lenovo Ideapad Z510. Thanks.
Hope -stable kernel can backport patch soon.
Comment 6 Aaron Lu 2013-11-15 06:11:03 UTC
commit 2c62333a408f5badd2d2ffd7177f95deeccc5ca4
Author: Aaron Lu <aaron.lu@intel.com>
Date:   Wed Nov 6 09:07:10 2013 +0800

    ACPI / video: Quirk initial backlight level 0

Entered Linus' tree.

Note You need to log in before you can comment on or make changes to this bug.